<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/entry_fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_margin="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/username_edit"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/password_edit"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/confirm_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/confirm_edit"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_below="@+id/entry_fields"
        android:layout_alignRight="@+id/entry_fields"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
